--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   background-position: center;
   position: relative;
 }
-.image-container:active::after {
+.image-container:hover::after {
   content: "";
   display: block;
   position: absolute;
@@ -53,7 +53,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.image-container:active::before {
+.image-container:hover::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -68,7 +68,7 @@ body {
   font-size: 1.58rem;
   cursor: pointer;
 }
-.card-title:active {
+.card-title:hover {
   color: var(--cyan);
 }
 
@@ -101,9 +101,10 @@ body {
 hr {
   flex-basis: 100%;
   color: var(--very-dark-blue-line);
+  border:1px solid var(--very-dark-blue-line);
 }
 .creator-image {
-  width: 25%;
+  width: 10%;
   height: 25%;
   flex-basis: 12%;
   margin-top: 0.55em;
@@ -123,6 +124,6 @@ strong {
   color: white;
   cursor: pointer;
 }
-strong:active {
+strong:hover {
   color: var(--cyan);
 }
